Credits Scene + MInor UI Update

--- a/SANCTI REVERIE/index.html
+++ b/SANCTI REVERIE/index.html
@@ -5,6 +5,7 @@
     <title>     
         Sancti Reverie~
     </title>       
+    <link rel="icon" type="image/png" href="./assets/images/ui/icon.png">
     <script src="./scripts/phaser.min.js" ></script>
     <script  type="module" src="./scripts/main.js"></script>
 
